# cocos2d-home

./: CMakeLists.txt  a.out  createPrj.sh  cscope.files
cocos/: ._2d  ._audio  ._base  ._deprecated  ._editor-support  ._math  ._network  ._physics  ._scripting  ._storage  ._ui
cocos/2d/: #CCDirector.h#  ._Android.mk  ._CCAction.cpp  ._CCAction.h  ._CCActionCamera.cpp  ._CCActionCamera.h  ._CCActionCatmullRom.cpp  ._CCActionCatmullRom.h  ._CCActionEase.cpp  ._CCActionEase.h  ._CCActionGrid.cpp  ._CCActionGrid.h  ._CCActionGrid3D.cpp  ._CCActionGrid3D.h  ._CCActionInstant.cpp  ._CCActionInstant.h  ._CCActionInterval.cpp  ._CCActionInterval.h  ._CCActionManager.cpp  ._CCActionManager.h  ._CCActionPageTurn3D.cpp  ._CCActionPageTurn3D.h  ._CCActionProgressTimer.cpp  ._CCActionProgressTimer.h  ._CCActionTiledGrid.cpp  ._CCActionTiledGrid.h  ._CCActionTween.cpp  ._CCActionTween.h  ._CCAnimation.cpp  ._CCAnimation.h  ._CCAnimationCache.cpp  ._CCAnimationCache.h  ._CCAtlasNode.cpp  ._CCAtlasNode.h  ._CCClippingNode.cpp  ._CCClippingNode.h  ._CCComponent.cpp  ._CCComponent.h  ._CCComponentContainer.cpp  ._CCComponentContainer.h  (+215 more)
cocos/audio/: ._CMakeLists.txt  ._android  ._include  ._ios  ._linux  ._mac  ._openal  ._proj.win32  ._proj.wp8  ._win32  ._winrt  ._wp8
cocos/base/: ._CCAffineTransform.cpp  ._CCAffineTransform.h  ._CCAutoreleasePool.cpp  ._CCAutoreleasePool.h  ._CCConsole.cpp  ._CCConsole.h  ._CCData.cpp  ._CCData.h  ._CCDataVisitor.cpp  ._CCDataVisitor.h  ._CCGeometry.cpp  ._CCGeometry.h  ._CCMap.h  ._CCNS.cpp  ._CCNS.h  ._CCPlatformConfig.h  ._CCPlatformMacros.h  ._CCRef.cpp  ._CCRef.h  (+10 more)
docs/: ._.gitignore  ._CODING_STYLE.md  ._Groups.h  ._MainPage.h  ._RELEASE_NOTES.md  ._doxygen.config
extensions/: ._Android.mk  ._CMakeLists.txt  ._ExtensionMacros.h  ._GUI  ._assets-manager  ._cocos-ext.h  ._physics-nodes  ._proj.win32  ._proj.wp8
licenses/: ._LICENSE_AA-EDT.txt  ._LICENSE_CCBReader.txt  ._LICENSE_CCControlExtension.txt  ._LICENSE_JSON4Lua.txt  ._LICENSE_Kazmath.txt  ._LICENSE_LuaSocket.txt  ._LICENSE_SpiderMonkey.txt  ._LICENSE_artwork.txt  ._LICENSE_box2d.txt  ._LICENSE_chipmunk.txt  ._LICENSE_cocos2d-iphone.txt  ._LICENSE_cocos2d-x.txt  ._LICENSE_cocosdenshion.txt  ._LICENSE_curl.txt  ._LICENSE_js.txt  ._LICENSE_jsoncpp.txt  ._LICENSE_libjpeg.txt  ._LICENSE_libpng.txt  ._LICENSE_libtiff.txt  ._LICENSE_libwebsockets.txt  ._LICENSE_libxml2.txt  ._LICENSE_lua.txt  ._LICENSE_ogg_vorbis.txt  ._LICENSE_tolua++.txt  ._LICENSE_zlib.txt
mylib/: CMakeLists.txt
plugin/: ._.gitignore  ._AUTHORS  ._README.md  ._plugin-x_ios.xcworkspace  ._plugins  ._protocols  ._samples  ._tools
templates/: ._cocos2dx_files.json  ._cpp-template-default  ._lua-template-default  ._lua-template-runtime
tests/: ._cpp-empty-test  ._cpp-tests  ._lua-empty-test  ._lua-tests
tests/shotGame/: CMakeLists.txt
tests/shotGame/src/: CMakeLists.txt  shotGameMain.cpp
tools/: ._bindings-generator  ._cocos2d-console  ._jenkins-scripts  ._make-package  ._tolua  ._travis-scripts
(+3726 files in other folders)
